# bhapi-ai-portal

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.realtime  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  generate_combined_pdf.py  generate_competitive_analysis_pdf.py  generate_marketing_pdf.py  migration_helpers.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  skills.md
.github/workflows/: ci.yml  sdk_release.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_content_to_capture_events.py  003_add_compound_indexes.py  004_add_api_keys_table.py  005_add_alert_snoozed_until.py  006_beta_schema_changes.py  007_add_block_approvals.py  008_add_class_groups.py  009_add_literacy_tables.py  010_conversation_summaries.py  011_family_agreements.py  012_time_budgets.py  013_panic_reports.py  014_member_visibility.py  015_rewards.py  016_emergency_contacts.py  017_add_missing_tables_and_columns.py  018_free_tier_defaults.py  019_demo_sessions.py  020_onboarding_progress.py  021_push_subscriptions.py  022_districts.py  023_teacher_features.py  024_escalation.py  025_soc2_readiness.py  026_cross_product.py  027_developer_marketplace.py  028_enterprise_policies.py  029_url_filtering.py  030_alert_correlations.py  031_coppa_2026.py  032_social_profiles_posts_follows.py  033_push_tokens.py  035_ohio_governance_extensions.py  036_eu_ai_act_tables.py  037_australian_compliance.py  038_uk_aadc_tables.py  039_device_agent_tables.py  040_intelligence_tables.py  041_content_report_description.py  (+19 more)
deploy/: render-env.py  render-setup.md
dns-proxy/: Dockerfile
dns-proxy/src/: config.py  resolver.py
docs/: Bhapi_Gap_Analysis_Q2_2026.md  bhapi-ai-portal-Project Status.txt  bhapi-family-ai-portal-spec.docx  bhapi-family-ai-portal-spec.md  bhapi-platform-unification-scope.html  bhapi-post-mvp-roadmap.docx  bhapi-post-mvp-roadmap.md  bhapi-status.txt  family-safety-features.md  generate_pdf.py  project-status-04032026.txt
docs/adr/: 001-unified-auth.md  002-social-module-structure.md  003-mongodb-to-postgresql.md  (+7 more)
extension/: STORE_LISTINGS.md  generate_store_screenshots.py  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
mobile/: .gitignore  README.md  eas.json  package-lock.json  package.json  tsconfig.base.json
portal/: package-lock.json  package.json  tailwind.config.js  vitest.config.ts
portal/public/: sw.js  (+2 more)
scripts/: generate_sdk.py  grant_test_subscription.py  lint_module_imports.py  stripe_live_test.py
sdks/: README.md
src/: __init__.py  config.py  constants.py  database.py  dependencies.py  encryption.py  exceptions.py  main.py  models.py  redis_client.py  schemas.py
tests/: conftest.py
(+1062 files in other folders)
