[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhapi-ai-portal"
version = "1.0.0"
description = "Bhapi Family AI Governance Portal"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "stripe>=8.0.0",
    "reportlab>=4.1.0",
    "sendgrid>=6.11.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
]

# No Python packages to build — this is a FastAPI app, not an installable library.
# This allows Render's `pip install .` to succeed by installing only dependencies.
[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/email/templates.py" = ["E501"]
"src/legal/content.py" = ["E501"]
"src/risk/safety_classifier.py" = ["E501"]
"src/reporting/generators/base.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
